--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,9 @@ input[type=text]:focus {
 }
 
 .head-picture {
+    text-align: center;
     align: center;
     padding-top: 20px;
-    max-width: 80%;
+    padding-bottom: 20px;
+    max-width: 90%;
 }
