--- a/css/main.css
+++ b/css/main.css
@@ -119,14 +119,17 @@ input[type=text]:focus {
 }
 
 .head-picture {
-    text-align: center;
-    align: center;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 40px;
-    max-width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 95%;
 }
 
 .slide-max-width {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 80%;
 }
