--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ input[type=text]:focus {
     width: 95%;
 }
 
-.slide-max-width {
+.center-max80 {
     display: block;
     margin-left: auto;
     margin-right: auto;
