--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,11 @@ body {
 .nav-logo {
     height: 70px;
     margin-top: -10px;
+    display: block;
 }
 
 .nav-text {
-    left: -100px;
+    left: 100px;
 }
 
 .main-logo {
@@ -131,4 +132,10 @@ input[type=text]:focus {
     margin-left: auto;
     margin-right: auto;
     max-width: 80%;
+}
+
+.image-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
