--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
 
 .main-text {
     position: relative;
-    font-size: 35px;
+    font-size: 1.1em;
     color: white;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
 }
