--- a/css/main.css
+++ b/css/main.css
@@ -149,6 +149,20 @@ input[type=text]:focus {
     max-width: 80%;
 }
 
+.center-max90 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 90%;
+}
+
+.center-max95 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 95%;
+}
+
 .image-center {
     display: block;
     margin-left: auto;
