--- a/css/main.css
+++ b/css/main.css
@@ -134,8 +134,6 @@ input[type=text]:focus {
 }
 
 .head-picture {
-    padding-top: 20px;
-    padding-bottom: 20px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -171,4 +169,33 @@ input[type=text]:focus {
 
 .skill-logo {
     max-height: 56px;
+}
+
+.spoiler {
+    box-shadow: none !important;
+}
+
+.spoiler-button {
+    background-color: rgb(104, 104, 104);
+    border: 1px solid white;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 19px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.spoiler-button:hover {
+    background-color: rgb(104, 104, 104);
+    color: white;
+    cursor: pointer;
+}
+
+.skill-player {
+    max-width: 80%;
+	margin: 0 auto;
+	border: 1px solid white;
 }
