--- a/css/main.css
+++ b/css/main.css
@@ -199,3 +199,36 @@ input[type=text]:focus {
 	margin: 0 auto;
 	border: 1px solid white;
 }
+
+.valk-design {
+	margin: 0 auto;
+	border: 1px solid white;
+}
+
+.preview-player {
+    max-width: 100%;
+	margin: 0 auto;
+	border: 1px solid white;
+}
+
+.wrapper{
+    display:table;
+    width:auto;
+    position:relative;
+    width:100%;
+}
+
+.playpause {
+    background-image:url(/img/controls/play.png);
+    background-repeat:no-repeat;
+    width:50%;
+    height:50%;
+    position:absolute;
+    left:0%;
+    right:0%;
+    top:0%;
+    bottom:0%;
+    margin:auto;
+    background-size:contain;
+    background-position: center;
+}
