--- a/css/main.css
+++ b/css/main.css
@@ -200,12 +200,6 @@ input[type=text]:focus {
 	border: 1px solid white;
 }
 
-.valk-player {
-    max-width: 100%;
-	margin: 0 auto;
-	border: 1px solid white;
-}
-
 .valk-wrapper{
     display:table;
     width:auto;
@@ -213,7 +207,13 @@ input[type=text]:focus {
     width:100%;
 }
 
-.playpause {
+.valk-player {
+    max-width: 100%;
+	margin: 0 auto;
+	border: 1px solid white;
+}
+
+.valk-player-logo {
     background-image:url(/img/controls/play.png);
     background-repeat:no-repeat;
     width:50%;
@@ -222,6 +222,21 @@ input[type=text]:focus {
     left:0%;
     right:0%;
     top:0%;
+    bottom:0%;
+    margin:auto;
+    background-size:contain;
+    background-position: center;
+}
+
+.valk-player-mark {
+    background-image:url(/img/ninja_icon.png);
+    background-repeat:no-repeat;
+    width:20%;
+    height:20%;
+    position:absolute;
+    left:80%;
+    right:0%;
+    top:58%;
     bottom:0%;
     margin:auto;
     background-size:contain;
